infra/k8s/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: eventticket.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              servicePort: 9998
              serviceName: auth-srv-clusterip
          - path: /api/tickets/?(.*)
            backend:
              servicePort: 9997
              serviceName: tickets-srv-clusterip
          - path: /api/orders/?(.*)
            backend:
              servicePort: 9996
              serviceName: orders-srv-clusterip
          - path: /?(.*)
            backend:
              servicePort: 3000
              serviceName: client-srv-clusterip
